# QSGRaceComputer

./: .gitignore  README.md  compose.yaml  poetry.toml  pyproject.toml  simple_config.conf  workspace.toml
bases/qsgrc/alert_service/: __init__.py  core.py
bases/qsgrc/car_webserver/: __init__.py  core.py  models.py
bases/qsgrc/fastapi_server/: __init__.py  core.py
bases/qsgrc/lora_service/: __init__.py  core.py
bases/qsgrc/mono/car/: __init__.py  core.py
bases/qsgrc/mono_car/: __init__.py  core.py
bases/qsgrc/mono_pit/: __init__.py
bases/qsgrc/obd2_service/: __init__.py  core.py
bases/qsgrc/simple_car/: __init__.py  core.py  lora.py
bases/qsgrc/simple_pit/: __init__.py  core.py
components/qsgrc/RYLR896/: __init__.py  core.py  errors.py
components/qsgrc/alerts/: __init__.py  core.py
components/qsgrc/car_router/: __init__.py  core.py
components/qsgrc/config/: __init__.py  core.py  valkeydns.py
components/qsgrc/event_server/: __init__.py  core.py
components/qsgrc/log/: __init__.py  core.py  valkey_sink.py
components/qsgrc/messages/: __init__.py  alerts.py  core.py  msgpack.py  obd2.py  rlyr896.py  web_messages.py
components/qsgrc/mock_obd2/: __init__.py
components/qsgrc/monitor/obd2/: __init__.py  command_mapping.py  core.py
components/qsgrc/pit_router/: __init__.py
components/qsgrc/simple_service/: lora.py  obd.py
components/shared/log/: __init__.py
development/: asyncio_test.py  conditions_test.py  generate_simple_config.py  lora_cli.py  lora_service_test.py  mock_obd2.py  msgpack.py  nats_client.py  nats_server.py  obd2.py  scratch.py  sse_test.py  valkey_experiments.py
projects/alert_service/: pyproject.toml
projects/lora_carside/: pyproject.toml
projects/lora_pitside/: pyproject.toml
projects/lora_service/: pyproject.toml
projects/obd2_service/: pyproject.toml
projects/simple_car/: pyproject.toml
scripts/: build_projects.py
test/bases/qsgrc/alert_service/: test_core.py
test/bases/qsgrc/car_webserver/: test_core.py
test/bases/qsgrc/fastapi_server/: test_core.py
test/bases/qsgrc/lora_service/: test_core.py
test/bases/qsgrc/mono/car/: test_core.py
test/bases/qsgrc/mono/pit/: test_core.py
test/bases/qsgrc/mono_car/: test_core.py
test/bases/qsgrc/mono_pit/: test_core.py
test/bases/qsgrc/obd2_service/: test_core.py
test/components/qsgrc/Alerts/: test_core.py
test/components/qsgrc/RYLR896/: test_core.py
test/components/qsgrc/alerts/: test_core.py
test/components/qsgrc/car_router/: test_core.py
test/components/qsgrc/env_config/: test_core.py
test/components/qsgrc/event_server/: test_core.py
test/components/qsgrc/log/: test_core.py
test/components/qsgrc/log2/: test_core.py
test/components/qsgrc/lora_interface/: test_core.py
test/components/qsgrc/messages/: test_core.py  test_msgpack.py
test/components/qsgrc/mock_obd2/: test_core.py
test/components/qsgrc/monitor/obd2/: test_core.py
test/components/qsgrc/pit_router/: test_core.py
web/car/: .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
web/car/src/: App.tsx  index.css
