[tool.poetry]
name = "obd2_service"
version = "0.1.0"

authors = ["Alex Hirschfeld <alex@d-qoi.com>"]
license = ""

packages = [
    {include = "qsgrc/obd2_service", from = "../../bases"},
    {include = "qsgrc/messages",from = "../../components"},
    {include = "qsgrc/config",from = "../../components"},
    {include = "qsgrc/monitor",from = "../../components"},
    {include = "qsgrc/log",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
